clusters/helheim/workloads/media/jellyfin/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        kubernetes.io/hostname: mediaserver
      containers:
        - name: jellyfin
          image: linuxserver/jellyfin:10.11.11
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: media
              mountPath: /media
            - name: jellyfin-config
              mountPath: /config
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
              gpu.intel.com/i915: "1"
            limits:
              memory: "4Gi"
              cpu: "1"
              gpu.intel.com/i915: "1"
      volumes:
        - name: media
          hostPath:
            path: /media/media/libraries
            type: Directory
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: pvc-jellyfin-config
