clusters/helheim/workloads/media/jellyfin/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
      name: http
